# Task_Test

./: .gitignore  pyproject.toml  requirements.txt
config/: settings.py  urls.py
task/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
team/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
